# android_game

./: .gitignore  Cargo.toml  gradle.properties  local.properties  readme.md  settings.gradle
LaTeX/: ordre1.tex  ordre2.tex  trace.tex
android_app/: build.gradle
android_app/src/main/java/me/delta/agdkmainloop/: MainActivity.java
android_app/src/main/rust/: Cargo.toml
android_app/src/main/rust/src/: lib.rs
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/delta/agdkmainloop/: MainActivity.java
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: entry_point.rs  game_core.rs  lib.rs
app/src/main/rust/src/rendering/: mod.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/device_extensions/: Cargo.toml  commentary.md
crates/device_extensions/src/: android.rs  dummy.rs  lib.rs
crates/main/: Cargo.toml
crates/main/src/: commentary.md  fluid_simulation.rs  game_core.rs  lib.rs  logic_hook.rs  pendulum.rs  rigid_body.rs  world.rs
crates/main/src/device_extension/: mod.rs
crates/main/src/event_handling/: mod.rs
crates/main/src/fluid_simulation/: grid.rs
crates/main/src/pendulum/: constraints.rs
crates/main/src/rendering/: mod.rs
crates/main/src/rigid_body/: constraints.rs
crates/main/src/world/: components.rs  constraints.rs
crates/running_context/: Cargo.toml  commentary.md
crates/running_context/src/: event_handling.rs  lib.rs
crates/running_context/src/rendering/: contexts.rs  line_renderer.rs  mod.rs
crates/running_context/src/rendering/shaders/: line.wgsl
entrypoints/: commentary.md
entrypoints/android_app/: build.gradle
entrypoints/android_app/src/main/java/me/delta/agdkmainloop/: MainActivity.java
entrypoints/android_app/src/main/rust/: Cargo.toml
entrypoints/android_app/src/main/rust/src/: lib.rs
entrypoints/desktop/src/: main.rs
gradle/wrapper/: gradle-wrapper.properties
src/: entry_point.rs  event_handler.rs  game_core.rs  game_loop.rs  lib.rs  logic_hook.rs  rendering.rs
src/event_handling/: mod.rs
src/rendering/: contexts.rs  drawing.rs  mod.rs
