[package]
name = "the_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "entry_point"
path = "src/entry_point.rs"

[dependencies]
pollster = "0.4.0"
winit = "0.30.5"
vello = "0.3.0"
log = "0.4.22"
image = "0.25.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"