[workspace]
resolver = "2"
members = ["crates/main",
    "crates/device_extensions",
    "android_app/src/main/rust", "crates/desktop"]

[workspace.dependencies]
winit = "0.30.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
device_extensions = { path = "crates/device_extensions" }
main = { path = "crates/main" }


