[workspace]
resolver = "2"
members = [
    # Crates
    "crates/device_extensions",
    "crates/running_context",
    "crates/main",

    # Entrypoints
    "entrypoints/desktop",
    "entrypoints/android_app/src/main/rust",
]

[workspace.dependencies]
winit = "0.30.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
device_extensions = { path = "crates/device_extensions" }
main = { path = "crates/main" }
running_context = { path = "crates/running_context" }
egui = "0.31.1"


