[package]
name = "main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
winit.workspace = true
device_extensions.workspace = true  # = { path = "../device_extensions" }
pollster = "0.4.0"
wgpu = "23.0.1"
egui-notify = "0.18.0"
egui-winit = "0.30.0"
egui-wgpu = "0.30.0"
epaint = "0.30.0"
egui = "0.30"
egui_dock = {git = "https://github.com/bryceberger/egui_dock.git", branch = "egui-0.30"}


[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"