[package]
name = "running_context"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
winit = { workspace = true}
device_extensions = { workspace = true}
tracing = { workspace = true }
egui = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pollster = "0.4.0"
wgpu = "24.0.1"
egui-winit = "0.31.1"
egui-wgpu = "0.31.1"