[package]
name = "android_main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
the_game = { path = "../../../../crates/main" }
winit = "0.30.5"
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-game-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"